# E-MM1

./: .gitattributes  .gitignore  DOWNLOAD.md  README.md  SOURCE_DATASETS.md  nohup.out  pyproject.toml
datasets/: .gitattributes
datasets/e-mm1_100m/infos/: audio.csv  image.csv  points.csv  text.csv  video.csv
datasets/e-mm1_100m/nn_12/: data_groups.csv
datasets/e-mm1_100m/nn_13/: data_groups.csv
datasets/e-mm1_100m/nn_14/: data_groups.csv
datasets/e-mm1_100m/nn_16/: data_groups.csv
datasets/e-mm1_100m/nn_2/: data_groups.csv
datasets/e-mm1_100m/nn_3/: data_groups.csv
datasets/e-mm1_100m/nn_5/: data_groups.csv
datasets/e-mm1_100m/nn_6/: data_groups.csv
datasets/e-mm1_100m/nn_7/: data_groups.csv
datasets/e-mm1_100m/nn_8/: data_groups.csv
datasets/e-mm1_100m/nn_9/: data_groups.csv
datasets/e-mm1_1m/: triplets.csv
datasets/e-mm1_1m/infos/: audio.csv  image.csv  points.csv  text.csv  video.csv
datasets/encord_phase_1_dataset/infos/: audio.csv  image.csv  points.csv  triplets.csv  video.csv
datasets/encord_phase_1_dataset/nn_1/: data_groups.csv
datasets/encord_phase_1_dataset/nn_10/: data_groups.csv
datasets/encord_phase_1_dataset/nn_11/: data_groups.csv
datasets/encord_phase_1_dataset/nn_15/: data_groups.csv
datasets/encord_phase_1_dataset/nn_4/: data_groups.csv
datasets/encord_phase_2_dataset/: annotation_mapping.csv
datasets/encord_phase_2_dataset/infos/: audio.csv  video.csv
datasets/eshot/: category_to_audio_ids.json  category_to_point_ids.json  eshot_audio_info.csv  eshot_points_info.csv
(+2 files in other folders)
