[project]
name = "e-mm1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "huggingface-hub>=0.35.3",
    "img2dataset>=1.47.0",
    "polars>=1.34.0",
    "yt-dlp>=2025.9.26",
]
# TODO: https://github.com/rom1504/img2dataset/issues/466
# Img2dataset enforces Python < 3.13
# Wait for this to be merged or force Python <3.13